# bandmates-audio-processing

./: .gitignore  CMakeLists.txt  build.sh
src/: AudioProcessor.cpp  AudioProcessor.h  main.cpp
